Fixed logout button
Fixed logout button

--- a/search.html
+++ b/search.html
@@ -24,7 +24,9 @@
 		<div class=title>Snippets search</div>
 		<div class=login>
 			<div class=user>logged in as Daria</div>
-			<div class=user>log out</div>
+			<div class=user>
+					<input type=button class=mybutton name='logout' value='logout'></input>
+			</div>
 		</div>
 	</div>
 	
