--- a/search.html
+++ b/search.html
@@ -25,7 +25,7 @@
 		<div class=login>
 			<div class=user>logged in as Daria</div>
 			<div class=user>
-					<input type=button class=mybutton name='logout' value='logout'></input>
+					<input type=button class='login-button' name='logout' value='logout'></input>
 			</div>
 		</div>
 	</div>
